@@ -10,7 +10,7 @@ import com.planner.Database.database;
 public class ArrangeV2 {
     FatchStudents fatchstudents =new FatchStudents();
 
-    public ArrayList<String> arrange(int[] classroomsArray ,String Date, String ArrName, String Sem,String Session11, String ORGID) throws SQLException {
+    public ArrayList<String> arrange(int[] classroomsArray ,String Date, String ArrName, String Sem,String Session11, String ORGID) throws Exception {
 
         ArrangementsDB arrangementsDB = new ArrangementsDB();
         Connection conn = arrangementsDB.connection();
@@ -23,6 +23,8 @@ public class ArrangeV2 {
 
         ArrayList<Students> students = fatchstudents.fatchStudent();
         int length = fatchstudents.getlength();
+        FatchStudentsV2 FSV2 = new FatchStudentsV2();
+        ArrayList<NewStudents> studentsV2 = FSV2.fatchStudent();
 
         ClassRooms classrooms = new ClassRooms();
 
@@ -34,25 +36,25 @@ public class ArrangeV2 {
 
         DB_Methods db = new DB_Methods();
         int currentClassIndex = 0;
-        String grpname =ORGID+ArrName+"_"+Sem+"_"+Session11;
+        String grpname =ORGID+"_"+ArrName+"_"+Sem+"_"+Session11;
         String grpquery ="CREATE TABLE "+grpname+" (arr_table_name varchar(50), range_table varchar(50),room_no varchar(20), arr_date varchar(50), arr_session varchar(10), capacity int(20), student int(20), faculty1 varchar(30), faculty varchar(30), rows_room varchar(10))";
         //arr_table_name varchar(100), range_table varchar(50), arr_date varchar(100), arr_session varchar(50), capacity int(50), student int(50)
         PreparedStatement ps002 = conn1.prepareStatement(grpquery);
         ps002.executeUpdate();
         PreparedStatement ps003 = conn1.prepareStatement("INSERT INTO arrgroups value('"+grpname+"')");
         ps003.executeUpdate();
-
+        RangeGenerator rangeGenerator = new RangeGenerator();
         while(true){
 
             String Table_name = ORGID+"_GRP_"+classes.get(currentClassIndex)+"_"+ArrName+"_"+ Session11+"_"+Sem;
             int[] RC = db.fetchRowColumn(classes.get(currentClassIndex));
 
             int totalstu=0;
-            PreparedStatement ps001 = conn.prepareStatement("CREATE TABLE "+Table_name+" (Row1 VARCHAR(100), SubCode Varchar(50), Status varchar(100))");
+            PreparedStatement ps001 = conn.prepareStatement("CREATE TABLE "+Table_name+" (Id INT AUTO_INCREMENT PRIMARY KEY, Enroll_no VARCHAR(100), SubCode Varchar(50), Status varchar(100))");
             ps001.executeUpdate();
             System.out.println("Table created");
 
-            String query2 ="Insert into "+Table_name+" values(?,?,?)";
+            String query2 ="INSERT INTO "+Table_name+" (Enroll_no, SubCode, Status) VALUES (?,?,?)";
 
             int index=0;
             for(int i=0;i<RC[1];i++){
@@ -66,29 +68,29 @@ public class ArrangeV2 {
                     PreparedStatement ps = conn.prepareStatement(query2);
                     try {
 
-                        ps.setString(1,students.get(index).getStudents().get(0));
-                        ps.setString(2,"null");
-                        ps.setString(3,"null");
+                        ps.setString(1,studentsV2.get(index).getStudents().getFirst().Enroll_no);
+                        ps.setString(2,studentsV2.get(index).getStudents().getFirst().SubCode);
+                        ps.setString(3,studentsV2.get(index).getStudents().getFirst().Status);
                         System.out.println(ps.toString());
-                        students.get(index).getStudents().remove(0);
+                        studentsV2.get(index).getStudents().remove(0);
 
                         totalstu++;
 
-                        if (students.get(index).getStudents().isEmpty()){
-                            students.remove(index);
+                        if (studentsV2.get(index).getStudents().isEmpty()){
+                            studentsV2.remove(index);
                             if (index==0){
                                 index++;
                             }
                         }
-                        if (students.isEmpty()){
-                            System.out.println("No students Left 1");
-                            break;
-                        }
+//                        if (studentsV2.isEmpty()){
+//                            System.out.println("No students Left 1");
+//                            break;
+//                        }
                     }catch (IndexOutOfBoundsException e){
-                        if (students.isEmpty()){
-                            System.out.println("No students Left 2");
-                            break;
-                        }
+//                        if (studentsV2.isEmpty()){
+//                            System.out.println("No students Left 2");
+//                            break;
+//                        }
                         System.out.println("nnnnul");
                         ps.setString(1, "ull");
                         ps.setString(2, "Null");
@@ -106,25 +108,27 @@ public class ArrangeV2 {
             }
             int totalCap = RC[0]*RC[1];
             ReturnStatement.add(Date+"_"+classes.get(currentClassIndex));
-            PreparedStatement ps11 = conn1.prepareStatement("Insert into "+grpname+" values (?,NULL,?,?,?,?,?,NULL,NULL,?)");
+            PreparedStatement ps11 = conn1.prepareStatement("Insert into "+grpname+" values (?,?,?,?,?,?,?,NULL,NULL,?)");
             ps11.setString(1, Table_name);
-            ps11.setString(2, String.valueOf(classes.get(currentClassIndex)));
-            ps11.setString(3, Date);
-            ps11.setString(4, Session11);
-            ps11.setString(5, String.valueOf(totalCap));
-            ps11.setString(6, String.valueOf(totalstu));
-            ps11.setString(7, String.valueOf(RC[1]));
+            ps11.setString(2, Table_name+"_Range");
+            ps11.setString(3, String.valueOf(classes.get(currentClassIndex)));
+            ps11.setString(4, Date);
+            ps11.setString(5, Session11);
+            ps11.setString(6, String.valueOf(totalCap));
+            ps11.setString(7, String.valueOf(totalstu));
+            ps11.setString(8, String.valueOf(RC[1]));
             ps11.executeUpdate();
 
+            currentClassIndex++;
+            rangeGenerator.generateRangeTable(conn,Table_name,Table_name+"_Range");
 
-            if (students.isEmpty()){
+            if (studentsV2.isEmpty()){
                 System.out.println("No students Left 3");
                 break;
             }
             if(classesLength==currentClassIndex+1){
                 break;
             }
-            currentClassIndex++;
 
         }
         return ReturnStatement;
